# WebServer

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini  main.cpp
docs/: address.md  http_response.md  logger.md  server.md  static_file.md  threadpool.md
docs/core/: threadpool.md
docs/utils/: config_parser.md  form_parser.md  mime_type.md  url.md
include/: address.h  http_response.h  logger.h  server.h  static_file.h  threadpool.h
include/core/: address.h  connection.h  epoll_manager.h  http_response.h  server.h  static_file.h  threadpool.h
include/utils/: config_parser.h  form_parser.h  logger.h  mime_type.h  url.h
src/: address.cpp  http_response.cpp  logger.cpp  server.cpp  static_file.cpp  threadpool.cpp
src/core/: address.cpp  connection.cpp  epoll_manager.cpp  http_response.cpp  server.cpp  static_file.cpp  threadpool.cpp
src/utils/: logger.cpp
static/: form.html  index.html
